--- a/app/styles/globals.css
+++ b/app/styles/globals.css
@@ -1,13 +1,7 @@
 :root {
   --background: #ffffff;
-  --foreground: #171717;
-}
-
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+  --primary:#713488;
+  --secondary:#8D55A3;
 }
 
 html,
@@ -17,9 +11,8 @@ body {
 }
 
 body {
-  color: var(--foreground);
   background: var(--background);
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: var(--font-tajawal), Arial, Helvetica, sans-serif; /* Use Tajawal as the primary font */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
