install icons library and add new colors

--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,7 @@
 :root {
   --background: #ffffff;
-  --primary: #713488;
-  --secondary: #8d55a3;
+  --primary: #462576;
+  --secondary: #783ba2;
+  --green: #00be98;
+  --orange: #ff6542;
 }
