--- a/sections/home/AdsPanel/AdsPanel.module.css
+++ b/sections/home/AdsPanel/AdsPanel.module.css
@@ -10,3 +10,19 @@
   line-height: 30px;
   font-family: var(--font-tajawal);
 }
+
+@media (max-width: 480px) {
+  .adPanel {
+    font-size: 12px;
+    height: 50px;
+    line-height: 14.4px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 850px) {
+  .adPanel {
+    font-size: 23px;
+    height: 120px;
+    line-height: 27.6px;
+  }
+}
