--- a/styles/variables.css
+++ b/styles/variables.css
@@ -1,5 +1,5 @@
 :root {
   --background: #ffffff;
-  --primary: #713488;
-  --secondary: #8d55a3;
+  --primary: #462576;
+  --secondary: #783BA2;
 }
