--- a/components/ui/PromoText/PromoText.module.css
+++ b/components/ui/PromoText/PromoText.module.css
@@ -6,10 +6,11 @@
   align-items: center;
   font-family: var(--font-tajawal);
   color: var(--primary);
-  background-color: rgba(255, 255, 255, 0.9);
+  background-color: white;
   font-weight: 700;
   line-height: 30px;
   text-align: center;
+  height: auto;
 }
 
 .title {
@@ -18,4 +19,24 @@
 
 .paragraph {
   font-size: 18px;
+}
+
+@media (max-width: 480px) {
+  .title {
+    font-size: 18px;
+  }
+
+  .paragraph {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 850px) {
+  .title {
+    font-size: 25px;
+  }
+
+  .paragraph {
+    font-size: 19px;
+  }
 }
