--- a/sections/home/ProgrammingTests/Components/TextBlock.module.css
+++ b/sections/home/ProgrammingTests/Components/TextBlock.module.css
@@ -14,9 +14,10 @@
   justify-content: center;
   gap: 10px;
 }
+
 .textBlock h3 {
   font-size: 23px;
-  margin-bottom: 27.6px;
+  margin-bottom: 0%;
   font-weight: 700;
   margin: 0;
 }
@@ -24,25 +25,62 @@
 .textBlock p {
   font-size: 19px;
   margin-bottom: 22.8px;
+  margin-right: 8%;
   font-weight: 500;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 768) and (max-width: 1024px) {
+  .titleContainer {
+    justify-content: flex-start;
+  }
+
+  .textBlock h3 {
+    text-align: center;
+  }
+
+  .textBlock p {
+    text-align: right;
+    margin-right: 20%;
+  }
+}
+
+@media (max-width: 768px) {
   .textBlock {
     gap: 10px;
+    text-align: center;
   }
+
   .titleContainer {
-    justify-content: center;
+    align-items: flex-start;
     margin: 0 auto;
     width: 80%;
   }
+
   .textBlock h3 {
     margin: 0;
     font-size: 25px;
-    margin-bottom: 10px;
+    margin-bottom: 1px;
   }
   .textBlock p {
-    margin-bottom: 20px;
-    text-align: center;
+    margin-bottom: 8%;
+    font-size: 17px;
+    width: 80%;
+  }
+}
+
+@media (max-width: 481px) {
+  .titleContainer {
+    margin: 10px auto;
+    align-items: flex-start;
+  }
+
+  .textBlock h3 {
+    font-size: 23px;
+    margin-bottom: 2px;
+    font-weight: 500;
+  }
+
+  .textBlock p {
+    font-size: 16px;
   }
 }
