--- a/sections/home/ProgrammingTests/ProgrammingTests.module.css
+++ b/sections/home/ProgrammingTests/ProgrammingTests.module.css
@@ -5,44 +5,47 @@
   background: linear-gradient(to right, var(--primary), #783ba2);
   color: #fff;
   width: 100%;
-  height: 90vh;
+  height: 100vh;
   margin: auto;
-  gap: 100px;
+  gap: 7%;
 }
 
 .textContainer {
-  width: 470px;
-  height: 562.07px;
+  width: 42%;
   text-align: right;
+  margin-top: 3%;
 }
 
 .buttonContainer {
   display: flex;
   justify-content: flex-end;
-  width: 100%;
-  margin-bottom: 10px;
+  width: 92%;
+}
+
+.butt {
+  margin-top: 8%;
 }
 
 .imageContainer {
   position: relative;
-  width: 600px;
-  height: 544.79px;
+  width: 40%;
+  height: 65vh;
 }
 
 .firstImage {
   position: relative;
-  width: 357.99px;
-  height: 325.94px;
-  top: 215px;
+  width: 62%;
+  height: 62%;
+  top: 40%;
   left: 0;
   z-index: 1;
 }
 
 .secondImage {
   position: absolute;
-  width: 357.99px;
-  height: 339.3px;
-  left: 240px;
+  width: 62%;
+  height: 62%;
+  left: 42%;
   top: 2px;
   z-index: 0;
 }
@@ -55,23 +58,14 @@
   }
 
   .textContainer {
-    width: 495px;
-    height: auto;
-    margin-top: 140px;
+    width: 70%;
+    text-align: center;
+    margin-top: 30%;
   }
-  .butt {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-  }
-  .buttonContainer {
-    justify-content: center;
-  }
+
   .imageContainer {
     order: -1;
-    width: 100%;
+    width: 85%;
     height: auto;
     display: flex;
     justify-content: center;
@@ -79,14 +73,61 @@
 
   .firstImage {
     width: 40%;
-    height: auto;
     position: relative;
+    top: 160px;
+    left: 5%;
   }
 
   .secondImage {
     width: 40%;
-    height: auto;
     position: relative;
-    left: -110px;
+    left: -8%;
+  }
+
+  .buttonContainer {
+    width: 70%;
+  }
+}
+
+@media (max-width: 481px) {
+  .section {
+    flex-direction: column-reverse;
+    height: auto;
+    padding-top: 12%;
+  }
+
+  .textContainer {
+    width: 90%;
+    height: auto;
+    margin-top: 35%;
+  }
+
+  .imageContainer {
+    position: relative;
+    width: 55%;
+    height: auto;
+  }
+
+  .firstImage {
+    position: relative;
+    width: 90%;
+    height: auto;
+    top: 26vw;
+    left: -12vw;
+    z-index: 1;
+  }
+
+  .secondImage {
+    position: absolute;
+    width: 90%;
+    height: auto;
+    left: 20vw;
+    top: -4vw;
+    z-index: 0;
+  }
+
+  .buttonContainer {
+    width: 100%;
+    justify-content: center;
   }
 }
