--- a/sections/home/ProgrammingTests/ProgrammingTests.module.css
+++ b/sections/home/ProgrammingTests/ProgrammingTests.module.css
@@ -54,7 +54,7 @@
   .section {
     flex-direction: column;
     height: auto;
-    padding-top: 60px;
+    padding: 60px 0;
   }
 
   .textContainer {
@@ -93,7 +93,7 @@
   .section {
     flex-direction: column-reverse;
     height: auto;
-    padding-top: 12%;
+    padding: 12% 0;
   }
 
   .textContainer {
