--- a/components/ui/PromoText/PromoText.module.css
+++ b/components/ui/PromoText/PromoText.module.css
@@ -1,17 +1,18 @@
 .promoBox {
   border-radius: 10px;
   box-shadow: 0px 1px 20px 2px rgba(0, 0, 0, 0.2);
-  background: white;
   display: flex;
   flex-direction: column;
   align-items: center;
+  justify-content: flex-start;
   font-family: var(--font-tajawal);
   color: var(--primary);
+  background-color: white;
   font-weight: 700;
   line-height: 30px;
   text-align: center;
-  height: auto;
-  padding: 45px 55px !important;
+  width: 45%;
+  padding: 3% 2%;
 }
 
 .promoText {
@@ -23,58 +24,30 @@
 }
 
 .paragraph {
-  font-size: 16px;
+  font-size: 18px;
 }
 
-@media (min-width: 768px) and (max-width: 1024px) {
-  .promoBox {
-    margin-left: 20%;
-    padding: 25px 40px 10px !important;
-    width: 55% !important;
+@media (max-width: 480px) {
+  .title {
+    font-size: 16px;
   }
 
+  .paragraph {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
   .title {
     font-size: 25px;
   }
 
   .paragraph {
-    font-size: 17px;
-  }
-}
-
-@media (min-width: 480px) and (max-width: 768px) {
-  .title {
-    font-size: 15px;
-    margin-bottom: 8px !important;
-  }
-
-  .paragraph {
-    font-size: 11px;
-    font-weight: 600;
-  }
-
-  .promoBox {
-    padding: 25px 40px 10px !important;
-    width: 55% !important;
-    margin-left: 20%;
-    height: 65vh;
-  }
-}
-
-@media (max-width: 480px) {
-  .title {
     font-size: 20px;
-    margin-bottom: 5px !important;
-  }
-
-  .paragraph {
-    font-size: 13.5px;
-    font-weight: 600;
   }
 
   .promoBox {
-    padding: 5px 15px !important;
-    width: 85% !important;
+    width: 90% !important;
     margin-left: 5%;
   }
 }
