--- a/sections/home/InteractiveTools/InteractiveTools.module.css
+++ b/sections/home/InteractiveTools/InteractiveTools.module.css
@@ -1,53 +1,46 @@
 .section {
   background-image: url("/images/InteractiveTools-img.png");
-  background-size: contain;
+  background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
   width: 100%;
-  height: 75vh;
+  height: 80vh;
   display: flex;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
   position: relative;
 }
 
 .promoBox {
   position: absolute;
-  margin-left: 5%;
+  margin-left: 150px;
 }
 
-@media (max-width: 1024px) {
+@media (min-width: 1025px) {
   .section {
-    background-size: cover;
-  }
-}
-
-@media (min-width: 481px) and (max-width: 1024px) {
-  .section {
-    height: 75vh;
-    background-size: 100% 100%;
-    justify-content: center;
-  }
-
-  .promoBox {
-    margin: auto;
+    justify-content: flex-start; /* Align left on larger screens */
+    padding-left: 150px; /* Move box slightly to the left */
   }
 }
 
 @media (max-width: 480px) {
   .section {
-    height: 95vh;
-    display: block;
-    padding: 25px 0;
+    height: 70vh;
+    justify-content: center;
   }
 
   .promoBox {
-    height: 100vh;
+    margin: 1px 20px;
   }
 }
 
-@media (max-width: 320px) {
+@media (min-width: 481px) and (max-width: 1024px) {
   .section {
-    height: 110vh;
+    height: 90vh;
+    justify-content: center;
+  }
+
+  .promoBox {
+    margin: auto;
   }
 }
