--- a/sections/home/EduPath/EduPath.module.css
+++ b/sections/home/EduPath/EduPath.module.css
@@ -56,4 +56,52 @@
    color: #713488;
 
   }
- 
+
+  @media ((min-width: 481px) and (max-width: 1024px)) {
+
+    .section {
+      flex-direction: column;
+      height: auto;
+      padding-top: 60px;
+      background-color:'red';
+
+    }
+    .containerOfAll {
+      /* flex-direction: column;  */
+      /* align-items: center;  */
+      /* height: auto; */
+      padding-top: 60px;
+
+    }
+   .girlImg{
+    order: -1;
+    display: flex;
+    margin-left: 242px;
+    
+  
+  }
+  .PromoTextContainer{
+    width: 495px;
+    
+    margin-top: 700px;
+    justify-content: center;
+    margin-left:1px;
+  }
+
+.ButtonContainer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100%;
+}
+.ButtonContainer {
+  justify-content: center;
+}
+
+
+
+  }
+
+
+
