--- a/components/ui/PromoText/PromoText.module.css
+++ b/components/ui/PromoText/PromoText.module.css
@@ -12,7 +12,6 @@
   line-height: 30px;
   text-align: center;
   width: 45%;
-  padding: 3% 2%;
 }
 
 .promoText {
@@ -25,9 +24,15 @@
 
 .paragraph {
   font-size: 18px;
+  font-weight: 500;
 }
 
 @media (max-width: 480px) {
+  .promoBox {
+    box-shadow: none;
+    border-color: var(--primary);
+    border-width: 1px;
+  }
   .title {
     font-size: 16px;
   }
@@ -38,6 +43,12 @@
 }
 
 @media (min-width: 481px) and (max-width: 1024px) {
+  .promoBox {
+    box-shadow: none;
+    border-color: var(--primary);
+    border-width: 1px;
+  }
+  
   .title {
     font-size: 25px;
   }
