--- a/sections/home/InteractiveTools/InteractiveTools.module.css
+++ b/sections/home/InteractiveTools/InteractiveTools.module.css
@@ -3,23 +3,21 @@
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  width: 100%;
-  height: 80vh;
+  width: auto;
+  height: 100vh;
   display: flex;
   align-items: center;
   justify-content: center;
-  position: relative;
 }
 
 .promoBox {
-  position: absolute;
-  margin-left: 150px;
+  margin-left: 50px;
 }
 
 @media (min-width: 1025px) {
   .section {
-    justify-content: flex-start; /* Align left on larger screens */
-    padding-left: 150px; /* Move box slightly to the left */
+    justify-content: flex-start;
+    padding-left: 150px;
   }
 }
 
@@ -27,6 +25,7 @@
   .section {
     height: 70vh;
     justify-content: center;
+    width: 80%;
   }
 
   .promoBox {
@@ -36,7 +35,7 @@
 
 @media (min-width: 481px) and (max-width: 1024px) {
   .section {
-    height: 90vh;
+    height: 70vh;
     justify-content: center;
   }
 
