--- a/styles/swiper-styles.css
+++ b/styles/swiper-styles.css
@@ -16,5 +16,21 @@
     color: var(--primary);
   }
   
+  .swiper-button-next, .swiper-button-prev {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-100%);
+    z-index: 10;
+  }
+  
+  .swiper-button-next {
+    right:-30px; 
+    margin-top: 50px;
+  }
+  
+  .swiper-button-prev {
+    left: -60px;
+    margin-top: 50px;
+   }
 
   
