--- a/sections/home/Courses/Courses.module.css
+++ b/sections/home/Courses/Courses.module.css
@@ -1,6 +1,6 @@
-.section{
-    padding: 50px 100px;
-    text-align: right;
+.section {
+  padding: 50px 100px;
+  text-align: right;
 }
 
 .box1 {
@@ -11,4 +11,27 @@
 
 .box2 {
   margin-block: 40px;
+}
+
+@media (max-width: 480px) {
+  .section {
+    padding: 50px 10px;
+    text-align: center;
+  }
+
+  .box1 {
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 50px;
+  }
+
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  .box1 {
+    flex-direction: column;
+    align-items: flex-end;
+    gap: 50px;
+  }
 }
