--- a/components/ui/SimpleCard/simpleCard.module.css
+++ b/components/ui/SimpleCard/simpleCard.module.css
@@ -1,9 +1,16 @@
+
 .container{
-    width: 1280px;
+    width: 100%;
+    max-width: 1280px;
+    margin: 0 auto;
+    padding: 20px; 
     margin-top: 30px; 
     margin-bottom: 30px;  
-    /* background-color:red; */
-    padding: 10px;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+    
+   
 }
     .card {
         border: 1px solid hsl(0, 0%, 90%); 
@@ -17,7 +24,8 @@
         text-align: center; 
         font-family: var(--font-tajawal);
         position: relative; 
-       margin-right: -10px;
+       margin-right:0px;
+       margin-bottom: 20px;
         box-sizing: border-box; 
         
         
@@ -91,5 +99,125 @@
           display: flex;
           flex-direction: column;
           justify-content: center;
+          
         }
-    }
+        .card{
+            width: 260px;
+            height:255.71px;
+            margin: 5px;
+           
+        }
+        .img{
+            width:62.07px;
+            height:62.07px;
+            position: relative;
+            top:1px; 
+    
+        }
+        .heading{
+            width :116px;
+            height:15px;
+            font-size: 16px;
+            font-weight: 700;
+            line-height: 19.2px;
+            text-align: center;
+            font-family:var(--font-tajawal);
+        }
+        .paragraph{
+            width: 183.3px;
+           height: 99.76px;
+           font-family: var(--font-tajawal);
+           font-size: 14px;
+           font-weight: 400;
+           line-height: 20px;
+           text-align: center;
+          
+        }
+        .footer{
+            margin:-20px;
+        }
+        .date{
+         Width:93px;
+         Height:16px;
+         font-weight:500;
+         font-family:var(--font-tajawal);
+         font-size:14px;  
+         line-height: 16.8px;
+         margin-right:50px;
+         margin-top:5px;
+          }
+         .starsContainer {
+        width:79.06px;
+        height:15.34px;
+        margin-left: 18px;
+          }
+         .starsContainer img{
+        width:14.41px;
+        height:15.34px;
+         }
+       }
+     @media (min-width: 481px) and (max-width: 1024px) {
+        .container {
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            margin-left: 130px;
+            
+          }
+          .card{
+              width: 385.45px;
+              height:380px;
+              margin: 5px;
+             
+          }
+          .img{
+              width:92.23px;
+              height:92.23px;
+              position: relative;
+              top:1px; 
+      
+          }
+          .heading{
+              width :138px;
+              height:24px;
+              font-size: 20px;
+              font-weight: 700;
+              line-height: 24px;
+              text-align: center;
+              font-family:var(--font-tajawal);
+          }
+          .paragraph{
+              width: 272.39px;
+             height:81.63px;
+             font-family: var(--font-tajawal);
+             font-size: 19px;
+             font-weight: 400;
+             line-height: 27px;
+             text-align: center;
+            
+          }
+          .footer{
+              margin:2px;
+              margin-top: 60px;
+          }
+          .date{
+           Width:144px;
+           Height:19px;
+           font-weight:500;
+           font-family:var(--font-tajawal);
+           font-size:19px;  
+           line-height: 22.8px;
+           margin-right:50px;
+           margin-top:5px;
+            }
+           .starsContainer {
+          width:117.2px;
+          height:22.74px;
+          margin-left: 18px;
+            }
+           .starsContainer img{
+          width:21.36px;
+          height:22.74px;
+           }
+         }
+  
