--- a/styles/swiper-styles.css
+++ b/styles/swiper-styles.css
@@ -16,21 +16,24 @@
     color: var(--primary);
   }
   
-  .swiper-button-next, .swiper-button-prev {
-    position: absolute;
-    top: 50%;
-    transform: translateY(-100%);
-    z-index: 10;
-  }
+  @media (max-width: 768px) {
+    .swiper-button-next,
+    .swiper-button-prev {
+      width: 40px;
+      height: 40px;
+    }
   
-  .swiper-button-next {
-    right:-30px; 
-    margin-top: 50px;
+    .swiper-button-next::after,
+    .swiper-button-prev::after {
+      font-size: 16px; /* لتصغير حجم الأيقونة إذا كانت تعتمد على النص */
+    }
+    .swiper-button-prev {
+      left: -10px; /* يتحرك لليسار */
+    }
+    
+    .swiper-button-next {
+      right: 10px; /* يتحرك لليمين */
+    }
   }
-  
-  .swiper-button-prev {
-    left: -60px;
-    margin-top: 50px;
-   }
 
   
