--- a/components/ui/card/SimpleCard/simpleCard.module.css
+++ b/components/ui/card/SimpleCard/simpleCard.module.css
@@ -105,6 +105,7 @@
             width: 260px;
             height:255.71px;
             margin: 5px;
+            margin-left: 50px;
            
         }
         .img{
@@ -170,6 +171,7 @@
               width: 385.45px;
               height:380px;
               margin: 5px;
+              margin-left: 160px;
              
           }
           .img{
