--- a/styles/swiper-styles.css
+++ b/styles/swiper-styles.css
@@ -1,18 +1,45 @@
-.swiper-button-next, .swiper-button-prev {
-    width: 70px; 
-    height: 70px; 
-    background-color: white;
-    border-radius: 50%;
-    color: var(--primary);
-    border: 4px solid var(--primary);
-    display: flex;
-    justify-content: center;
-    align-items: center;
+.swiper-button-next,
+.swiper-button-prev {
+  width: 70px;
+  height: 70px;
+  background-color: white;
+  border-radius: 50%;
+  color: var(--primary);
+  border: 4px solid var(--primary);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.swiper-button-next:after,
+.swiper-button-prev:after {
+  font-size: 25px;
+  font-weight: 900;
+  color: var(--primary);
+}
+
+@media (max-width: 480px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    width: 40px;
+    height: 40px;
   }
-  
-  .swiper-button-next:after, .swiper-button-prev:after {
-    font-size: 25px;
-    font-weight: 900;
-    color: var(--primary);
+
+  .swiper-button-next:after,
+  .swiper-button-prev:after {
+    font-size: 15px;
   }
-  
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  .swiper-button-next,
+  .swiper-button-prev {
+    width: 80px;
+    height: 80px;
+  }
+
+  .swiper-button-next:after,
+  .swiper-button-prev:after {
+    font-size: 30px;
+  }
+}
