--- a/sections/home/Courses/Courses.module.css
+++ b/sections/home/Courses/Courses.module.css
@@ -27,19 +27,33 @@
     text-align: center;
   }
 
+  .CardsContainer {
+    margin-left: 35px;
+  }
+
   .box1 {
     flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 50px;
   }
-
 }
 
 @media (min-width: 481px) and (max-width: 1024px) {
+  .section {
+    padding: 50px 100px;
+    text-align: center;
+  }
+
   .box1 {
     flex-direction: column;
     align-items: flex-end;
     gap: 50px;
+  }
+
+  .box2 {
+    display: flex;
+    align-items: center;
+    justify-content: right;
   }
 }
