--- a/sections/home/CardSection/CardSection.module.css
+++ b/sections/home/CardSection/CardSection.module.css
@@ -1,10 +1,14 @@
 .section {
-  padding: 50px 130px;
+  padding: 50px 300px;
   display: flex;
   align-items: center;
   justify-content: center;
   position: relative;
   width: 100%;
+}
+
+.cardSectionContainer {
+  max-width: 100%;
 }
 
 @media (max-width: 480px) {
@@ -18,3 +22,33 @@
     padding: 50px 50px;
   }
 }
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .cardSectionContainer {
+    max-width: 45%;
+  }
+}
+
+@media (min-width: 1441px) and (max-width: 1700px) {
+  .cardSectionContainer {
+    max-width: 122%;
+  }
+}
+
+/*@media (max-width: 480px) {
+  .learningCenterContainer {
+    max-width: 55%;
+    height: 320px;
+    padding: 80px 0px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  .learningCenterContainer {
+    max-width: 65%;
+    padding: 50px 20px;
+  }
+}
+
+
+*/
