--- a/sections/home/Courses/Courses.module.css
+++ b/sections/home/Courses/Courses.module.css
@@ -8,7 +8,8 @@
   align-items: center;
   justify-content: center;
   position: relative;
-  width: 100%;
+  width: 80%;
+  margin: 0 auto;
 }
 
 .box1 {
@@ -23,12 +24,15 @@
 
 @media (max-width: 480px) {
   .section {
-    padding: 50px 20px;
+    padding: 50px 0;
+    padding-left: 50px;
+    padding-right: 30px;
     text-align: center;
   }
 
   .CardsContainer {
-    margin-left: 25px;
+    margin-left: 35px;
+    text-align: center;
   }
 
   .box1 {
@@ -41,8 +45,13 @@
 
 @media (min-width: 481px) and (max-width: 1024px) {
   .section {
-    padding: 50px 100px;
+    padding: 50px 130px;
     text-align: center;
+  }
+
+  .CardsContainer {
+    width: 100%;
+    margin: 0 auto;
   }
 
   .box1 {
@@ -55,5 +64,19 @@
     display: flex;
     align-items: center;
     justify-content: right;
+  }
+}
+
+@media (min-width: 1024px) and (max-width: 1440px) {
+  .CardsContainer {
+    width: 60%;
+    margin: 0 auto;
+  }
+}
+
+@media (min-width: 1441px) and (max-width: 1700px) {
+  .CardsContainer {
+    width: 90%;
+    margin: 0 auto;
   }
 }
