--- a/components/ui/Card/SimpleCard/simpleCard.module.css
+++ b/components/ui/Card/SimpleCard/simpleCard.module.css
@@ -24,6 +24,7 @@
   margin-right: 0px;
   margin-bottom: 20px;
   box-sizing: border-box;
+  border-radius: 10px;
 }
 .rectangle {
   position: absolute;
