--- a/sections/home/Courses/Courses.module.css
+++ b/sections/home/Courses/Courses.module.css
@@ -25,14 +25,14 @@
 @media (max-width: 480px) {
   .section {
     padding: 50px 0;
-    padding-left: 50px;
-    padding-right: 30px;
+    padding-right: 0px;
     text-align: center;
   }
 
   .CardsContainer {
-    margin-left: 35px;
+    margin-left: 25px;
     text-align: center;
+    padding-left: 60px;
   }
 
   .box1 {
@@ -40,6 +40,7 @@
     justify-content: center;
     align-items: center;
     gap: 50px;
+    padding: 0 35px;
   }
 }
 
