--- a/app/globals.css
+++ b/app/globals.css
@@ -1,7 +1,7 @@
 :root {
   --background: #ffffff;
-  --primary:#713488;
-  --secondary:#8D55A3;
+  --primary: #713488;
+  --secondary: #8d55a3;
 }
 
 html,
@@ -26,4 +26,8 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+}
+
+ul {
+  list-style: none;
 }
