--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -2,7 +2,7 @@
   display: flex;
   align-items: center;
   justify-content: space-between;
-  padding-inline: 70px;
+  padding-inline: 60px;
   height: 100px;
   color: var(--background);
   background-color: var(--secondary);
@@ -10,4 +10,99 @@
   font-weight: 700;
   line-height: 22px;
   font-family: var(--font-tajawal);
+}
+
+.logo {
+  width: 280px;
+  height: 60px;
+}
+
+.menuList {
+  border-radius: 5px !important;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  left: -30px;
+  position: absolute;
+}
+
+.menuItem {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--primary) !important;
+  padding: 15px !important;
+  width: 100%;
+  position: relative;
+}
+
+.menuItem::after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 20px;
+  right: 20px;
+  width: 80%;
+  height: 1px;
+  background-color: var(--primary);
+}
+
+.menuItem:last-child::after {
+  display: none;
+}
+
+.menuItem:hover {
+  background-color: var(--primary);
+  color: white !important;
+  border-radius: 5px !important;
+}
+
+.menuItem:active {
+  background-color: var(--primary);
+  color: white !important;
+  border-radius: 5px !important;
+}
+
+.menuItem:last-child {
+  border-bottom: none;
+}
+
+.subMenu {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  color: var(--primary);
+  width: 100%;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 20px;
+  font-family: var(--font-tajawal);
+  background-color: rgba(113, 52, 136, 0.08) !important;
+}
+
+
+
+@media (max-width: 480px) {
+  .nav {
+    padding-inline: 30px;
+    height: 55px;
+  }
+  .logo {
+    width: 170px;
+    height: 40px;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  .nav {
+    padding-inline: 5px;
+    gap:40px;
+  }
+
+  .logo {
+    width: 200px;
+    height: 60px;
+  }
 }
