--- a/components/ui/PromoText/PromoText.module.css
+++ b/components/ui/PromoText/PromoText.module.css
@@ -20,11 +20,19 @@
 
 .title {
   font-size: 23px;
+  margin-bottom: 10px;
+  margin-top: 10px;
 }
 
 .paragraph {
   font-size: 18px;
   font-weight: 500;
+   width :640px;
+   height:180px;
+   padding:10px;
+   padding-top:40px;
+   Line-height:30px;
+   
 }
 
 @media (max-width: 480px) {
