--- a/components/ui/Navbar/Navbar.module.css
+++ b/components/ui/Navbar/Navbar.module.css
@@ -82,7 +82,20 @@
   background-color: rgba(113, 52, 136, 0.08) !important;
 }
 
-
+.desktopSubMenu {
+  position: absolute;
+  top: 40px;
+  background-color: white;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  padding: 10px;
+  border-radius: 8px;
+  z-index: 100;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 280px;
+}
 
 @media (max-width: 480px) {
   .nav {
@@ -98,7 +111,7 @@
 @media (min-width: 481px) and (max-width: 1024px) {
   .nav {
     padding-inline: 5px;
-    gap:40px;
+    gap: 40px;
   }
 
   .logo {
