--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;700&display=swap');
+
 :root {
   --background: #ffffff;
   --primary: #713488;
@@ -8,6 +10,7 @@ html,
 body {
   max-width: 100vw;
   overflow-x: hidden;
+  font-family: 'Inter', sans-serif;
 }
 
 body {
@@ -15,6 +18,7 @@ body {
   font-family: var(--font-tajawal), Arial, Helvetica, sans-serif; /* Use Tajawal as the primary font */
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
 }
 
 * {
