--- a/sections/home/ProgrammingTests/ProgrammingTests.module.css
+++ b/sections/home/ProgrammingTests/ProgrammingTests.module.css
@@ -5,125 +5,175 @@
   background: linear-gradient(to right, var(--primary), #783ba2);
   color: #fff;
   width: 100%;
-  height: 100vh;
-  margin: auto;
+  height: 740px;
   gap: 7%;
 }
 
 .textContainer {
-  width: 42%;
+  width: 539px;
   text-align: right;
-  margin-top: 3%;
 }
 
 .buttonContainer {
   display: flex;
   justify-content: flex-end;
-  width: 92%;
-}
-
-.butt {
-  margin-top: 8%;
+  width: 91%;
 }
 
 .imageContainer {
   position: relative;
-  width: 40%;
-  height: 65vh;
+  width: 600px;
+  height: 545px;
 }
 
 .firstImage {
   position: relative;
-  width: 62%;
-  height: 62%;
-  top: 40%;
-  left: 0;
+  width: 358px;
+  height: 339px;
+  top: 38%;
   z-index: 1;
 }
 
 .secondImage {
   position: absolute;
-  width: 62%;
-  height: 62%;
-  left: 42%;
-  top: 2px;
+  width: 358px;
+  height: 326px;
+  left: 40%;
+  top: 0%;
   z-index: 0;
 }
 
-@media ((min-width: 481px) and (max-width: 850px)) {
+@media ((min-width: 1024px) and (max-width: 1440px)) {
   .section {
     flex-direction: column;
     height: auto;
-    padding: 60px 0;
   }
 
   .textContainer {
-    width: 70%;
     text-align: center;
-    margin-top: 30%;
+    width: 485px;
+    margin: 49px 0;
   }
 
   .imageContainer {
     order: -1;
-    width: 85%;
-    height: auto;
+    width: 771px;
+    height: 700px;
     display: flex;
     justify-content: center;
+    margin-top: 44px;
   }
 
   .firstImage {
-    width: 40%;
-    position: relative;
-    top: 160px;
-    left: 5%;
+    left: 10%;
+    width: 460px;
+    height: 436px;
   }
 
   .secondImage {
-    width: 40%;
     position: relative;
-    left: -8%;
+    left: -10%;
+    width: 460px;
+    height: 419px;
   }
 
   .buttonContainer {
-    width: 70%;
+    width: 82%;
+    margin-top: 53px;
+  }
+}
+
+@media ((min-width: 768px) and (max-width: 1024px)) {
+  .imageContainer {
+    order: -1;
+    width: 569px;
+    height: 540px;
+    display: flex;
+    justify-content: center;
+    margin-top: 44px;
+  }
+
+  .firstImage {
+    position: relative;
+    left: 10%;
+    top: 40%;
+    width: 340px;
+    height: 336px;
+  }
+
+  .secondImage {
+    position: relative;
+    left: -10%;
+    width: 340px;
+    height: 328px;
+  }
+}
+
+@media ((min-width: 480px) and (max-width: 768px)) {
+  .section {
+    flex-direction: column;
+    height: auto;
+  }
+
+  .textContainer {
+    text-align: center;
+    width: 320px;
+    margin: 48px 0;
+  }
+
+  .imageContainer {
+    order: -1;
+    width: 368px;
+    height: 380px;
+    margin-top: 44px;
+  }
+
+  .firstImage {
+    left: 10%;
+    top: 40%;
+    width: 220px;
+    height: 236px;
+  }
+
+  .secondImage {
+    left: -10%;
+    width: 220px;
+    height: 236px;
+  }
+
+  .buttonContainer {
+    width: 100%;
   }
 }
 
 @media (max-width: 481px) {
   .section {
     flex-direction: column-reverse;
-    height: auto;
-    padding: 12% 0;
+    justify-content: flex-end;
+    min-height: 920px;
+    gap: 0;
   }
 
   .textContainer {
-    width: 90%;
-    height: auto;
-    margin-top: 35%;
+    width: 258px;
   }
 
   .imageContainer {
-    position: relative;
-    width: 55%;
-    height: auto;
+    width: 297px;
+    height: 270px;
+    margin: 47px 0 25px;
   }
 
   .firstImage {
-    position: relative;
-    width: 90%;
-    height: auto;
-    top: 26vw;
-    left: -12vw;
-    z-index: 1;
+    top: 37.5%;
+    width: 177px;
+    height: 168px;
   }
 
   .secondImage {
-    position: absolute;
-    width: 90%;
-    height: auto;
-    left: 20vw;
-    top: -4vw;
-    z-index: 0;
+    left: 40%;
+    width: 177px;
+    height: 162px;
   }
 
   .buttonContainer {
