--- a/app/SignUp/SignUp.css
+++ b/app/SignUp/SignUp.css
@@ -120,3 +120,44 @@
   align-items: center;
   gap: 0.5rem;
 }
+
+@media (max-width: 480px) {
+  .card {
+    width: 90%;
+  }
+
+  .form-section h1 {
+    font-size: 18px;
+    text-align: center;
+    direction: rtl;
+  }
+
+  .card .form-section {
+    padding: 20px;
+  }
+
+  .button-group {
+    flex-direction: column;
+    gap: 1rem;
+  }
+
+  .checkbox-group {
+    text-align: center;
+  }
+
+  .checkbox-group input {
+    margin-left:0;
+    width: 25px;
+    height: 25px;
+  }
+
+  .checkbox-group label {
+    border-bottom: none;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  .card {
+    width: 70%;
+  }
+}
