--- a/components/ui/InputField/InputField.css
+++ b/components/ui/InputField/InputField.css
@@ -76,3 +76,24 @@
 .input-container.error {
   border: 2px solid #db4a39;
 }
+
+@media (max-width: 480px) {
+  .form-group {
+    text-align: center;
+  }
+}
+
+@media (min-width: 481px) and (max-width: 1024px) {
+  .searchBarContainer {
+    flex-direction: column;
+    align-items: center;
+    gap: 30px;
+  }
+  .section {
+    margin: 50px;
+  }
+
+  .searchBar {
+    width: 90%;
+  }
+}
