--- a/components/ui/SocialButton/SocialButton.css
+++ b/components/ui/SocialButton/SocialButton.css
@@ -4,12 +4,16 @@
   justify-content: center;
   gap: 0.5rem;
   padding-inline: 20px;
-  border: 1px solid var(--background);
   border-radius: 5px;
   color: #333;
   font-size: 18px;
   cursor: pointer;
   color: var(--background);
+  font-family: var(--font-tajawal);
+  font-size: 18px;
+  font-weight: 700;
+  line-height: 26px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 
 .social-google {
