edit profile part 2

--- a/components/ui/Card/MediaCard/MediaCard.module.css
+++ b/components/ui/Card/MediaCard/MediaCard.module.css
@@ -42,8 +42,8 @@
 .iconContainer,
 .iconContainer2 {
   display: flex;
-  justify-content: center; /* لضبط الأيقونات في المنتصف أفقياً */
-  align-items: center; /* لضبط الأيقونات عمودياً */
+  justify-content: center; 
+  align-items: center; 
   gap: 15px;
 }
 
@@ -79,8 +79,8 @@
   .iconContainer,
   .iconContainer2 {
     display: flex;
-    justify-content: center; /* لضبط الأيقونات في المنتصف أفقياً */
-    align-items: center; /* لضبط الأيقونات عمودياً */
+    justify-content: center;
+    align-items: center; 
     gap: 15px;
   }
 
