--- a/sections/home/InteractiveTools/InteractiveTools.module.css
+++ b/sections/home/InteractiveTools/InteractiveTools.module.css
@@ -44,7 +44,7 @@
     background-size: cover;
     justify-content: center;
     padding-left: 0;
-    height: 383px;
+    height: 70vh;
     padding: 18px 20px 14px;
   }
 }
