--- a/components/ui/Card/SimpleCard/simpleCard.module.css
+++ b/components/ui/Card/SimpleCard/simpleCard.module.css
@@ -1,4 +1,3 @@
-
 .card {
   border: 1px solid hsl(0, 0%, 90%);
   box-shadow: 3px 50px 120px 150px rgba(50, 50, 50, 0.9);
@@ -17,7 +16,7 @@
 .img {
   width: 100%;
   height: 100px;
-  margin-top:13px;
+  margin-top: 13px;
 }
 .heading {
   color: #723689;
@@ -25,7 +24,6 @@
   font-weight: 700;
   line-height: 22.8px;
   width: 100%;
- 
 }
 .paragraph {
   color: #723689;
@@ -35,15 +33,14 @@
   width: 295px;
   height: 108px;
   direction: rtl;
- 
 }
 .footer {
   display: flex;
   align-items: center;
   justify-content: center;
- gap:50px;
+  gap: 50px;
 }
-.date{
+.date {
   color: #723689;
   width: 115px;
   height: 21.98px;
@@ -52,14 +49,12 @@
   font-weight: 500 !important;
   line-height: 21.6px;
   text-align: left;
-  
-
 }
 .starsContainer {
   display: flex;
   width: 127.38px;
   height: 24.7px;
- }
+}
 
 @media (max-width: 414px) {
   .card {
@@ -67,98 +62,29 @@
     height: 50.71px;
     margin: 5px;
     margin-left: 10px;
-    gap:10px;
+    gap: 10px;
   }
   .footer {
-    justify-content: space-around;
+    justify-content: space-between;
+    gap: 10px;
   }
- 
+
   .date {
-    width: 93px;
+    width: 70px;
     height: 16px;
     font-weight: 500;
     font-family: var(--font-tajawal);
     font-size: 14px;
     line-height: 16.8px;
-    margin-right: 10px;
+    margin-right: 40px;
     margin-top: 5px;
   }
   .starsContainer {
-    width: 79.06px;
+    width: 65px;
     height: 15.34px;
-    margin-left: 5px;
   }
 }
 
-/* @media (min-width: 414px) and (max-width: 767px) {
-  .container {
-    display: flex;
-    flex-wrap: wrap; 
-    place-items: center;
-    justify-content: center; 
-   
-  }
-  .card {
-    width: 50px;
-    height: 50.71px;
-    margin: 5px;
-    margin-left: 10px;
-    gap:10px;
-  }
-  .img {
-    width: 62.07px;
-    height: 62.07px;
-    position: relative;
-    top: 1px;
-  }
-  .heading {
-    width: 116px;
-    height: 15px;
-    font-size: 16px;
-    font-weight: 700;
-    line-height: 19.2px;
-    text-align: center;
-    font-family: var(--font-tajawal);
-    
-  }
-  .paragraph {
-    width: 295.3px;
-    height: 99.76px;
-    font-family: var(--font-tajawal);
-    font-size: 14px;
-    font-weight: 400;
-    line-height: 20px;
-    text-align: center;
-    margin-top:20px;
-    
-  }
-  .img {
-    width:326px !important;
-  }
-  .date {
-    width: 93px;
-    height: 16px;
-    font-weight: 500;
-    font-family: var(--font-tajawal);
-    font-size: 14px;
-    line-height: 16.8px;
-    margin-left:100px;
-    
-  }
-  .footer { 
-   
-    margin-top:1px;
-  }
-  .starsContainer {
-    margin-left: -5px;
-     transform: translateX(-70px)
-  }
-  .starsContainer img {
-    width: 14.41px;
-    height: 15.34px;
-
-  }
-} */
 @media (min-width: 768px) and (max-width: 1024px) {
   .container {
     display: flex;
@@ -195,7 +121,8 @@
     text-align: center;
   }
   .footer {
-    margin: 2px;
+    justify-content: space-between;
+    gap: 10px;
   }
   .date {
     width: 144px;
@@ -217,7 +144,3 @@
     height: 22.74px;
   }
 }
-
-
-
-
