--- a/components/ui/InputField/InputField.css
+++ b/components/ui/InputField/InputField.css
@@ -77,6 +77,30 @@
   border: 2px solid #db4a39;
 }
 
+.dropdown-menu {
+  position: absolute;
+  background-color: #fff;
+  border: 1px solid #ccc;
+  list-style: none;
+  padding: 0;
+  margin: 5px 0 0;
+  width: 50%;
+  z-index: 10;
+  max-height: 200px;
+  overflow-y: auto;
+  box-shadow: 0px 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.dropdown-item {
+  padding: 10px;
+  cursor: pointer;
+  transition: background-color 0.2s;
+}
+
+.dropdown-item:hover {
+  background-color: #f0f0f0;
+}
+
 @media (max-width: 480px) {
   .form-group {
     text-align: center;
